Closed Bug 111574 Opened 24 years ago Closed 24 years ago

WS6U2 tinderbox burning due broken db/mork/src/orkinHeap.cpp

Categories

(SeaMonkey :: General, defect, P1)

Sun
Solaris
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.7

People

(Reporter: roland.mainz, Assigned: roland.mainz)

References

()

Details

Attachments

(1 file, 3 obsolete files)

"nebiros" tinderbox which runns on Solaris 7 SPARC using Sun Workshop 6 Update 2 is burning... -- snip -- orkinHeap.cpp Building deps for ../../../../../../../../home/mozilla/src/2001-11-22-08-trunk/mozilla/db/mork/src/orkinHeap.cpp /opt/SUNWspro/bin/CC -o orkinHeap.o -c -DOSTYPE=\"SunOS5\" -DOSARCH=\"SunOS\" -DOJI -I../../../dist/include/xpcom -I../../../dist/include/mork -I../../../dist/include -I/shared/bigtmp2/mozilla/2001-11-22-08-trunk/objdir_ws6_xlib/dist/include/nspr -I/usr/openwin/include -KPIC -I/usr/openwin/include -mt -DDEBUG -DDEBUG_mozilla -DTRACING -g -O -I/usr/openwin/include -DMOZILLA_CLIENT -DBROKEN_QSORT=1 -DNSCAP_DISABLE_DEBUG_PTR_TYPES=1 -DD_INO=d_ino -DSTDC_HEADERS=1 -DHAVE_ST_BLKSIZE=1 -DHAVE_INT16_T=1 -DHAVE_INT32_T=1 -DHAVE_INT64_T=1 -DHAVE_UINT=1 -DHAVE_UINT_T=1 -DHAVE_UINT16_T=1 -DSTDC_HEADERS=1 -DHAVE_DIRENT_H=1 -DHAVE_SYS_BYTEORDER_H=1 -DHAVE_MEMORY_H=1 -DHAVE_UNISTD_H=1 -DHAVE_NL_TYPES_H=1 -DHAVE_SYS_STATVFS_H=1 -DHAVE_SYS_STATFS_H=1 -DHAVE_SYS_VFS_H=1 -DHAVE_SYS_MOUNT_H=1 -DHAVE_LIBM=1 -DHAVE_LIBDL=1 -DHAVE_LIBSOCKET=1 -D_REENTRANT=1 -DHAVE_RANDOM=1 -DHAVE_STRERROR=1 -DHAVE_LCHOWN=1 -DHAVE_FCHMOD=1 -DHAVE_SNPRINTF=1 -DHAVE_LOCALTIME_R=1 -DHAVE_STATVFS=1 -DHAVE_MEMMOVE=1 -DHAVE_RINT=1 -DHAVE_NL_LANGINFO=1 -DHAVE_STRTOK_R=1 -DHAVE_IOS_BINARY=1 -DHAVE_CPP_EXPLICIT=1 -DHAVE_CPP_SPECIALIZATION=1 -DHAVE_CPP_MODERN_SPECIALIZE_TEMPLATE_SYNTAX=1 -DHAVE_CPP_PARTIAL_SPECIALIZATION=1 -DHAVE_CPP_ACCESS_CHANGING_USING=1 -DHAVE_CPP_AMBIGUITY_RESOLVING_USING=1 -DHAVE_CPP_NAMESPACE_STD=1 -DHAVE_CPP_UNAMBIGUOUS_STD_NOTEQUAL=1 -DHAVE_CPP_NEW_CASTS=1 -DHAVE_CPP_DYNAMIC_CAST_TO_VOID_PTR=1 -DNEED_CPP_UNUSED_IMPLEMENTATIONS=1 -DHAVE_I18N_LC_MESSAGES=1 -DMOZ_DEFAULT_TOOLKIT=\"xlib\" -DMOZ_WIDGET_XLIB=1 -DMOZ_ENABLE_XREMOTE=1 -DMOZ_X11=1 -DIBMBIDI=1 -DSUNCTL=1 -DACCESSIBILITY=1 -DMOZ_MATHML=1 -DMOZ_SVG=1 -DMOZ_LOGGING=1 -DDETECT_WEBSHELL_LEAKS=1 -DMOZ_USER_DIR=\".mozilla\" -DMOZ_XUL=1 -DINCLUDE_XUL=1 -DNS_MT_SUPPORTED=1 -DUSE_IMG2=1 -DMOZ_DLL_SUFFIX=\".so\" -DXP_UNIX=1 -DUNIX_ASYNC_DNS=1 -DJS_THREADSAFE=1 -DNS_PRINT_PREVIEW=1 -DMOZ_REFLOW_PERF=1 -DMOZ_REFLOW_PERF_DSP=1 ../../../../../../../../home/mozilla/src/2001-11-22-08-trunk/mozilla/db/mork/src/orkinHeap.cpp "/usr/include/memory.h", line 21: Error: Only one of a set of overloaded functions can be extern "C". "/usr/include/memory.h", line 21: Error: std::memchr(const void*, int, unsigned), returning void*, was previously declared returning const void*. "../../../../../../../../home/mozilla/src/2001-11-22-08-trunk/mozilla/db/mork/src/morkObject.h", line 164: Warning: morkObject::AddStrongRef hides the virtual function morkNode::AddStrongRef(morkEnv*). "../../../../../../../../home/mozilla/src/2001-11-22-08-trunk/mozilla/db/mork/src/morkObject.h", line 164: Warning: morkObject::CutStrongRef hides the virtual function morkNode::CutStrongRef(morkEnv*). 2 Error(s) and 2 Warning(s) detected. gmake[4]: *** [orkinHeap.o] Error 2 gmake[4]: Leaving directory `/shared/bigtmp2/mozilla/2001-11-22-08-trunk/objdir_ws6_xlib/db/mork/src' gmake[3]: *** [libs] Error 2 gmake[3]: Leaving directory `/shared/bigtmp2/mozilla/2001-11-22-08-trunk/objdir_ws6_xlib/db/mork' gmake[2]: *** [libs] Error 2 gmake[2]: Leaving directory `/shared/bigtmp2/mozilla/2001-11-22-08-trunk/objdir_ws6_xlib/db' gmake[1]: *** [tier_9] Error 2 gmake[1]: Leaving directory `/shared/bigtmp2/mozilla/2001-11-22-08-trunk/objdir_ws6_xlib' gmake: *** [default] Error 2 -- snip -- ... since checkin of bug 110850 ("XPComify public mdb interfaces, and remove orkin layer from Mork"). I'll fix this ...
Accepting ...
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla0.9.7
/opt/SUNWspro/bin/CC -E -DOSTYPE=\"SunOS5\" -DOSARCH=\"SunOS\" -DOJI -I../../../dist/include/xpcom -I../../../dist/include/mork -I../../../dist/include -I/shared/bigtmp2/mozi lla/2001-11-22-08-trunk/objdir_ws6_xlib/dist/include/nspr -I/usr/openwin/include -KPIC -I/usr/openwin/include -mt -DDEBUG -DDEBUG_mozilla -DTRACING -g -O -I/usr/openwin/include -DMOZILLA_CLIENT -DBROKEN_QSORT=1 -DNSCAP_DISABLE_DEBUG_PTR_TYPES=1 -DD_INO= d_ino -DSTDC_HEADERS=1 -DHAVE_ST_BLKSIZE=1 -DHAVE_INT16_T=1 -DHAVE_INT32_T=1 -DHAVE_INT64_T=1 -DHAVE_UINT=1 -DHAVE_UINT_T=1 -DHAVE_ UINT16_T=1 -DSTDC_HEADERS=1 -DHAVE_DIRENT_H=1 -DHAVE_SYS_BYTEORDER_H=1 -DHAVE_MEMORY_H=1 -DHAVE_UNISTD_H=1 -DHAVE_NL_TYPES_H=1 -DHA VE_SYS_STATVFS_H=1 -DHAVE_SYS_STATFS_H=1 -DHAVE_SYS_VFS_H=1 -DHAVE_SYS_MOUNT_H=1 -DHAVE_LIBM=1 -DHAVE_LIBDL=1 -DHAVE_LIBSOCKET=1 -D _REENTRANT=1 -DHAVE_RANDOM=1 -DHAVE_STRERROR=1 -DHAVE_LCHOWN=1 -DHAVE_FCHMOD=1 -DHAVE_SNPRINTF=1 -DHAVE_LOCALTIME_R=1 -DHAVE_STATVF S=1 -DHAVE_MEMMOVE=1 -DHAVE_RINT=1 -DHAVE_NL_LANGINFO=1 -DHAVE_STRTOK_R=1 -DHAVE_IOS_BINARY=1 -DHAVE_CPP_EXPLICIT=1 -DHAVE_CPP_SPEC IALIZATION=1 -DHAVE_CPP_MODERN_SPECIALIZE_TEMPLATE_SYNTAX=1 -DHAVE_CPP_PARTIAL_SPECIALIZATION=1 -DHAVE_CPP_ACCESS_CHANGING_USING=1 -DHAVE_CPP_AMBIGUITY_RESOLVING_USING=1 -DHAVE_CPP_NAMESPACE_STD=1 -DHAVE_CPP_UNAMBIGUOUS_STD_NOTEQUAL=1 -DHAVE_CPP_NEW_CASTS=1 -DHA VE_CPP_DYNAMIC_CAST_TO_VOID_PTR=1 -DNEED_CPP_UNUSED_IMPLEMENTATIONS=1 -DHAVE_I18N_LC_MESSAGES=1 -DMOZ_DEFAULT_TOOLKIT=\"xlib\" -DMO Z_WIDGET_XLIB=1 -DMOZ_ENABLE_XREMOTE=1 -DMOZ_X11=1 -DIBMBIDI=1 -DSUNCTL=1 -DACCESSIBILITY=1 -DMOZ_MATHML=1 -DMOZ_SVG=1 -DMOZ_LOGGIN G=1 -DDETECT_WEBSHELL_LEAKS=1 -DMOZ_USER_DIR=\".mozilla\" -DMOZ_XUL=1 -DINCLUDE_XUL=1 -DNS_MT_SUPPORTED=1 -DUSE_IMG2=1 -DMOZ_DLL_SU FFIX=\".so\" -DXP_UNIX=1 -DUNIX_ASYNC_DNS=1 -DJS_THREADSAFE=1 -DNS_PRINT_PREVIEW=1 -DMOZ_REFLOW_PERF=1 -DMOZ_REFLOW_PERF_DSP=1 ../ ../../../../../../../home/mozilla/src/2001-11-22-08-trunk/mozilla/db/mork/src/orkinHeap.cpp
Attached patch Patch for 2001-11-22-08-trunk (obsolete) — Splinter Review
Todays lesson: * DO NOT include standard headers with |#include "stdlib.h"|. The one and only allowed way is to use |#include <stdlib.h>|. I fixed this for the other headers in the file, too ...
Attachment #58952 - Attachment is obsolete: true
We should update the "portability guidelines" with that info ...
Keywords: patch, review
Bienvenu, can you review and check this in for Roland? I am not familiar with the code. Thanks
More "award-winning" crap in the tree: -- snip -- % (nice -n 19 ksh -c 'find mozilla | egrep "\.cpp$|\.h$" | while read i ; do x=$ (cat $i | egrep "\"(stdio.h|stdlib.h|malloc.h|ctype.h|string.h|errno.h)\"") ; if [ "$x" != "" ] ; then echo "#### ----> $i" ; echo "$x"; fi ; done') 2>&1 | tee xxx.txt #### ----> mozilla/security/manager/ssl/src/nsSDR.cpp #include "stdlib.h" #### ----> mozilla/security/nss/cmd/signtool/signtool.h #include "errno.h" #### ----> mozilla/security/nss/lib/jar/jar.h #include "stdio.h" #### ----> mozilla/modules/libimg/png/pngconf.h /* "stdio.h" functions are not supported on WindowsCE */ #### ----> mozilla/modules/oji/tests/src/TestLoader/OJITestLoader.h #include "string.h" #### ----> mozilla/extensions/cookie/tests/TestCookie.cpp #include "stdio.h" #### ----> mozilla/extensions/transformiix/source/base/Double.cpp #include "stdlib.h" #include "stdio.h" #### ----> mozilla/extensions/transformiix/source/xml/dom/standalone/NodeDefinition.cpp #include "string.h" #### ----> mozilla/extensions/transformiix/source/xslt/functions/GenerateIdFunctionCall.cpp #include "stdio.h" #### ----> mozilla/extensions/wallet/cookieviewer/nsCookieViewer.cpp #include "stdio.h" #### ----> mozilla/extensions/wallet/editor/nsWalletEditor.cpp #include "stdio.h" #### ----> mozilla/extensions/wallet/signonviewer/nsSignonViewer.cpp #include "stdio.h" #### ----> mozilla/extensions/wallet/walletpreview/nsWalletPreview.cpp #include "stdio.h" #### ----> mozilla/extensions/xmlterm/base/mozLineTerm.cpp #include "stdio.h" #### ----> mozilla/embedding/browser/gtk/tests/TestGtkEmbed.cpp #include "stdlib.h" #### ----> mozilla/netwerk/test/TestSocketInput.cpp #include "stdio.h" #### ----> mozilla/rdf/tests/dsds/nsRDFDataSourceDS.cpp #include "stdio.h" #### ----> mozilla/xpcom/sample/nsSample.cpp #include "stdio.h" #### ----> mozilla/xpcom/tests/FilesTest.cpp //#include "string.h" #### ----> mozilla/xpcom/tests/nsIFileEnumerator.cpp #include "stdio.h" #### ----> mozilla/xpcom/tests/nsIFileTest.cpp #include "stdio.h" #### ----> mozilla/xpinstall/src/nsJSFile.cpp #include "stdio.h" #### ----> mozilla/gfx/src/photon/nsImagePh.cpp #include "errno.h" #### ----> mozilla/gfx/src/xprint/nsGfxFactoryXP.cpp #include "stdio.h" #### ----> mozilla/htmlparser/src/nsParserNode.cpp #include "string.h" #### ----> mozilla/webshell/tests/viewer/unix/gtk/nsGtkMenu.cpp #include "stdio.h" #### ----> mozilla/webshell/tests/viewer/unix/qt/nsQtMenu.cpp #include "stdio.h" #### ----> mozilla/webshell/tests/viewer/nsPhMenu.cpp #include "stdio.h" #### ----> mozilla/widget/src/beos/nsSound.cpp #include "stdio.h" #### ----> mozilla/widget/src/gtk/nsGtkEventHandler.cpp #include "stdio.h" #### ----> mozilla/mailnews/import/eudora/src/EudoraDebugLog.h #include "stdio.h" #### ----> mozilla/mailnews/import/oexpress/OEDebugLog.h #include "stdio.h" #### ----> mozilla/mailnews/import/outlook/src/MapiDbgLog.h #include "stdio.h" #### ----> mozilla/mailnews/import/outlook/src/OutlookDebugLog.h #include "stdio.h" #### ----> mozilla/mailnews/import/text/src/TextDebugLog.h #include "stdio.h" #### ----> mozilla/mailnews/mime/cthandlers/glue/nsMimeContentTypeHandler.cpp #include "stdio.h" #### ----> mozilla/mailnews/mime/emitters/src/nsMimeBaseEmitter.cpp #include "stdio.h" #### ----> mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp #include "stdio.h" #### ----> mozilla/mailnews/mime/emitters/src/nsMimeRawEmitter.cpp #include "stdio.h" #### ----> mozilla/mailnews/mime/emitters/src/nsMimeXULEmitter.cpp #include "stdio.h" #### ----> mozilla/mailnews/mime/emitters/src/nsMimeXmlEmitter.cpp #include "stdio.h" #### ----> mozilla/mailnews/mime/src/mimeenc.cpp #include "stdio.h" #### ----> mozilla/mailnews/mime/src/nsMimeConverter.cpp #include "stdio.h" #### ----> mozilla/mailnews/mime/src/nsMimeObjectClassAccess.cpp #include "stdio.h" #### ----> mozilla/mailnews/mime/src/nsStreamConverter.cpp #include "stdio.h" -- snip --
Attached file More items to fix ... (obsolete) —
(nice -n 19 ksh -c 'find mozilla | egrep "\.cpp$|\.h$" | while read i ; do x=$ (cat $i | egrep "\"(stdio.h|stdlib.h|malloc.h|ctype.h|string.h|strings.h|math.h|errno.h|varargs.h|utmp.h|utmpx.h|utime.h|wchar.h|st ddef.h|stdarg.h|signal.h|regexp.h|pwd.h|poll.h|malloc.h|locale.h|limits.h|float.h|elf.h|aio.h|X11/.*)\"") ; if [ "$x" != "" ] ; the n echo "#### ------> $i" ; echo "$x"; fi ; done')
Comment on attachment 58957 [details] [diff] [review] Patch for 2001-11-22-08-trunk I'll file a patch to fix this all ...
Attachment #58957 - Flags: needs-work+
Attachment #58957 - Attachment is obsolete: true
Attachment #58965 - Attachment is obsolete: true
Comment on attachment 58971 [details] [diff] [review] Better patch for 2001-11-22-08-trunk r=bzbarsky
Attachment #58971 - Flags: review+
Comment on attachment 58971 [details] [diff] [review] Better patch for 2001-11-22-08-trunk sr=bienvenu, thanks for fixing this.
Attachment #58971 - Flags: superreview+
I checked in the mork part, which should be sufficient to fix the tinderboxen breakage, right? By the way, this wasn't changed in my recent checkin; it had been this way for a couple years - some include cycle must have changed to expose the problem. We can worry about the other changes when I'm back from vacation. Thanks again for fixing this.
> I checked in the mork part, which should be sufficient to fix the tinderboxen > breakage, right? Yes, but I do not like splitting-up the patch. The other issues are very good canidates for the next bustage... please please check them in, too - before the patch gets rotten!!
when I'm back from vacation...
... which is in [1hour]/[1day]/[10days]/[100days]/[365.25days] ? :)
I've checked in all the rest of the patche except the changes to security/. I don't have permissions to check into security/; someone else should do that.
bz: Thanks! I'll keep the bug open for the patches to security/ and for updating the "portability" docs ...
kaie: Are you able to check in the security/-part ?
Wan-Teh, there are two changes that affect nss files search for security/nss in the patch. Then changes look fine to me, but you should review them. If you want Rangan can take care of checking in these changes on the 3.3 branch and moving the NSS_CLIENT_TAG to the new version. security/manager check in only need r=, sr=. Anybody with write access can check in. r= from me for using <stdio.h> include for standard includes on the security/manager part of the code.
Comment on attachment 58971 [details] [diff] [review] Better patch for 2001-11-22-08-trunk Roland, Thanks for your patch for the two NSS files. - mozilla/security/nss/cmd/signtool/signtool.h - mozilla/security/nss/lib/jar/jar.h I have checked your fixes into the tip of NSS. I am not going to add your fixes to the NSS_CLIENT_TAG right away because the #include "stdio.h" problem does not break the NSS build, probably because NSS is C code.
Can I mark this bug as FIXED now ?
I'll mark it fixed and you can mark it verified.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
The only missing items are: -- snip -- % (nice -n 19 ksh -c 'find mozilla | egrep "\.cpp$|\.h$" | while read i ; do x=$ (cat $i | egrep "\"(stdio.h|stdlib.h|malloc.h|ctype.h|string.h|errno.h)\"") ; if [ "$x" != "" ] ; then echo "#### ----> $i" ; echo "$x"; fi ; done') 2>&1 | tee xxx.txt #### ----> mozilla/security/nss/cmd/signtool/signtool.h #include "errno.h" #### ----> mozilla/security/nss/lib/jar/jar.h #include "stdio.h" #### ----> mozilla/security/manager/ssl/src/nsSDR.cpp #include "stdlib.h" #### ----> mozilla/modules/libimg/png/pngconf.h /* "stdio.h" functions are not supported on WindowsCE */ -- snip -- Mhhh, if this compiles... OK. Marking VERIFIED ...
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: