security/nss/lib/jar/jar.h
@@ -55,7 +55,7 @@
 #endif
 #endif
 
-#include "stdio.h"
+#include <stdio.h>
 
 /* various types */
 
